crates/nirvash-macros/tests/fixtures/code_tests_legacy_context.stderr
error: context = ... is no longer supported; use binding = ... and implement context() on ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_context.rs:131:46
    |
131 | #[code_tests(spec = Spec, binding = Binding, context = tests::driver_context)]
    |                                              ^^^^^^^
